Update WaterTNT.java